--- a/html/biografia.html
+++ b/html/biografia.html
@@ -19,10 +19,10 @@
                     <a href="videos.html">videos</a>
                 </div>
                 <div class="redes"> 
-                    <a href="https://instagram.com/alok/" target="blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://facebook.com/livealok" target="blank"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://youtube.com/user/livealok" target="blank"><i class="fab fa-youtube"></i></a>
-                    <a href="https://open.spotify.com/artist/0NGAZxHanS9e0iNHpR8f2W" target="blank"><i class="fab fa-spotify"></i></a>
+                    <a href="https://instagram.com/alok/" target="_blank" class="child"><i class="fab fa-instagram"></i></a>
+                    <a href="https://facebook.com/livealok" target="_blank" class="child"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://youtube.com/user/livealok" target="_blank" class="child"><i class="fab fa-youtube"></i></a>
+                    <a href="https://open.spotify.com/artist/0NGAZxHanS9e0iNHpR8f2W" target="_blank" class="child"><i class="fab fa-spotify"></i></a>
                 </div> 
         </div>  
 
@@ -33,9 +33,9 @@
 
         <div class="contenedor-biografia">
             <div class="izquierda">
-                <img class="uno" src="../img/alok-bio.jpg" alt="">
-                <img class="dos" src="../img/alok-bio2.jpg" alt="">
-                <img class="tres" src="../img/alok-bio3.jpg" alt="">
+                <img class="img-bio" src="../img/alok-bio.jpg" alt="">
+                <img class="img-bio" src="../img/alok-bio2.jpg" alt="">
+                <img class="img-bio" src="../img/alok-bio3.jpg" alt="">
             </div>
 
             <div class="derecha">
