--- a/html/videos.html
+++ b/html/videos.html
@@ -20,11 +20,11 @@
                     <a href="videos.html">videos</a>
                 </div>
                 <div class="redes"> 
-                    <a href="https://instagram.com/alok/" target="blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://facebook.com/livealok" target="blank"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://youtube.com/user/livealok" target="blank"><i class="fab fa-youtube"></i></a>
-                    <a href="https://open.spotify.com/artist/0NGAZxHanS9e0iNHpR8f2W" target="blank"><i class="fab fa-spotify"></i></a>
-                </div> 
+                    <a href="https://instagram.com/alok/" target="_blank" class="child"><i class="fab fa-instagram"></i></a>
+                    <a href="https://facebook.com/livealok" target="_blank" class="child"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://youtube.com/user/livealok" target="_blank" class="child"><i class="fab fa-youtube"></i></a>
+                    <a href="https://open.spotify.com/artist/0NGAZxHanS9e0iNHpR8f2W" target="_blank" class="child"><i class="fab fa-spotify"></i></a>
+                </div>  
         </div> 
 
     </header>
