--- a/html/biografia.html
+++ b/html/biografia.html
@@ -6,6 +6,7 @@
     <title>Alok Oficial | Biography</title>
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="shortcut icon" href="/iconos/favicon.svg" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
